refactor: JavaDocs